Fix time dropdown overlapping the input field when list is open on top of the input field
Summary: As in trello card from kitt

Test Plan:
Currently used in coach recommendations. Create
recommendation, add due date and change time see that the list of
available times does not overlap input field.

Reviewers: dylan, khirasaki

Reviewed By: dylan

Differential Revision: http://phabricator.khanacademy.org/D3555

--- a/jquery.timepicker.css
+++ b/jquery.timepicker.css
@@ -20,6 +20,8 @@
 	margin: 0;
 	padding: 0;
 	list-style: none;
+	position: relative;
+	z-index: -1;
 }
 
 .ui-timepicker-duration {
